# iib-rust

./: Cargo.toml  index.html
languages/: swedish.json
personal/: bewegung.db
pkg/: lib.d.ts  lib.js  lib_bg.wasm-opt.wasm  lib_bg.wasm.d.ts
queries/: explore.sql  overview_country.sql  overview_year.sql  statistics_overnights.sql  statistics_per_domain_year.sql  statistics_theme_count.sql  statistics_visits.sql  trip_border_crossings.sql  trip_map_pins.sql
queries/simple/: common_participant_groups.sql  common_trip_domains.sql  images_date_list.sql  images_photo_time.sql  map_contour.sql  map_country.sql  map_country_list.sql  map_theme.sql  search_event.sql  search_trip.sql  statistics_trip_count.sql  trip_all_trips.sql  trip_border_crossings.sql  trip_events.sql  trip_next.sql  trip_previous.sql  trip_summary.sql
queries/solitaire/: count_cities.sql
src/: filecontent.rs  helper.rs  lib.rs  map.rs  overview.rs  pagelogic.rs  query_params.rs  render.rs  sqlite_query.rs  statistics.rs  topbar.rs  utils.rs
templates/: _menu.liquid  _menu.tera  about.liquid  about.tera  explore.tera  images.tera  map.tera  overview.liquid  overview.tera  overview_country.tera  overview_plain.tera  overview_year.tera  search.tera  source.tera  statistics_overnights.tera  statistics_summary.tera  statistics_themes.tera  statistics_visits.tera  trip.tera
