[package]
name = "lib"
version = "2.9.9"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "Response",
    "Url",
    "UrlSearchParams",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
] }
js-sys = "0.3"
opfs-project = "0.1.14"
html-escape = "0.2.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"

