[package]
name = "lib"
version = "2.9.9"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Response",
    "Url",
    "UrlSearchParams",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "Event",

    # Select & options
    "HtmlSelectElement",
    "HtmlOptionsCollection",
    "HtmlOptionElement",

    # URL + History
    "Url",
    "History",
    "Location",

] }
js-sys = "0.3"
# beroende nedan till CONSOLE
opfs-project = "0.1.14"
#html-escape = "0.2.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
liquid = "0.26.11"
sqlite-wasm-rs = { version = "0.4.8", default-features = false, features = ["precompiled"] }
opfs = "0.1.4"
include_json = "0.1.1"
chrono = "0.4.42"
kstring = "2.0.2"
tera = "1.20.1"
getrandom = { version = "0.2", features = ["js"] }
tmp = "0.0.1"

